--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ nav {
 
 
 .hero {
-    background: url('/home/sravani/Desktop/computer.jpeg') no-repeat center center/cover;
+    background: url('https://raw.githubusercontent.com/sravnigithub/portfolio/main/background.jpg'') no-repeat center center/cover;
     height: 100vh;
     display: flex;
     justify-content: center;
