--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ nav {
 }
 
 .social-logo {
-    width: 30px;  /* Small icon size */
+      /* Small icon size */
     object-fit: contain; /* Ensures the image is scaled properly */
     transition: transform 0.3s ease-in-out;
 }
